Included information about variants while displaying route lines and numbers on stops (#49)
* chore: Updated generated client code

* refactor: Updated route lines to use variant information

* feat: Introduced `Set` structure

* refactor: Updated route per stop to use variants

* refactor: Moved `Set` to separate package

* refactor: Moved `PriorityQueue` to `structs` package
